@@ -1,11 +1,15 @@
 import datetime
 
+from zope import interface
 from zope import schema
+
 from zope.app.pagetemplate import viewpagetemplatefile
+
 from z3c.form import form
 from z3c.form import subform
 from z3c.form import field
 from z3c.form import button
+from z3c.form import validator
 from Products.Five import BrowserView
 from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
 from plone.z3cform import z2
@@ -63,8 +67,23 @@ class SendAsNewsletterForm(form.Form):
 
     @button.buttonAndHandler(_('Show preview'), name='show_preview')
     def handle_show_preview(self, action):
-        self.request.response.redirect(self.context.absolute_url()+\
-                                       '/preview-newsletter.html')
+        data, errors = self.extractData()
+        if errors:
+            self.status = form.EditForm.formErrorsMessage
+            return
+
+        channels = data['channels']
+        if len(channels) != 1:
+            self.status = _(u"Please select precisely one channel for preview.")
+            return
+
+        name = tuple(channels)[0].name
+        include_collector_items = data['include_collector_items']
+        
+        self.request.response.redirect(
+            self.context.absolute_url()+\
+            '/preview-newsletter.html?name=%s&include_collector_items=%d' % \
+            (name, int(bool(include_collector_items))))
 
     @button.buttonAndHandler(_('Send preview'), name='preview')
     def handle_preview(self, action):
